refactor: made feedback more visual

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
       </div>
     </div>
 
+    <p>Other clients text:</p>
+
+    <p id="boxTexts"></p>
+
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
   </body>
